--- a/src/main/resources/group/example/demo/hello-view.fxml
+++ b/src/main/resources/group/example/demo/hello-view.fxml
@@ -21,7 +21,7 @@
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
-              <MenuItem mnemonicParsing="false" text="Load" />
+              <MenuItem mnemonicParsing="false" onAction="#loadImage" text="Load" />
                   <MenuItem mnemonicParsing="false" text="Save" />
                   <MenuItem mnemonicParsing="false" onAction="#exitProgram" text="Exit" />
             </items>
